--- a/index.html
+++ b/index.html
@@ -1,7 +1,59 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <style>
+        .screen {
+            position: absolute;
+            left: 0;
+            right: 0;
+            width: 100%;
+            height: 100%;
+            background-color: gray;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .holder1 {
+            width: 50%;
+            height: 50%;
+            flex-direction: column;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 10px;
+            font-family: 'Pixel Operator';
+            filter: drop-shadow(rgba(56, 56, 56, 0.432) 1rem 1rem 10px);
+            border: 5px solid black;
+            background-image: linear-gradient(to bottom right, rgb(211, 102, 233), rgb(110, 29, 148));
+            animation: fadeInAnimation ease 1s;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
+        }
+        h1 {
+            filter: drop-shadow(rgba(56, 56, 56, 0.432) 2rem 2rem 10px);
+        }
+        h2 {
+            filter: drop-shadow(rgba(56, 56, 56, 0.432) 2rem 2rem 10px);
+        }
+
+        @keyframes fadeInAnimation {
+            0% {
+                opacity: 0;
+            }
+ 
+            100% {
+                opacity: 1;
+            }
+        }
+    </style>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="screen">
+        <div class="holder1">
+            <h1>Kate McCarney</h1>
+            <h2>Amature-ish Game Developer</h2>
+        </div>
+    </div>
 </body>
 </html>
