--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
             right: 0;
             width: 100%;
             height: 100%;
-            background-color: gray;
+            background-color: #81689D;
             display: flex;
             align-items: center;
             justify-content: center;
+            color:#1F2544;
         }
         .holder1 {
             width: 50%;
-            height: 50%;
+            height: 15%;
             flex-direction: column;
             display: flex;
             align-items: center;
@@ -23,8 +24,8 @@
             border-radius: 10px;
             font-family: 'Pixel Operator';
             filter: drop-shadow(rgba(56, 56, 56, 0.432) 1rem 1rem 10px);
-            border: 5px solid black;
-            background-image: linear-gradient(to bottom right, rgb(211, 102, 233), rgb(110, 29, 148));
+            border: 5px solid #1F2544;
+            background-image: linear-gradient(to bottom right, #FFD0EC, #c58bae);
             animation: fadeInAnimation ease 1s;
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
@@ -35,7 +36,18 @@
         h2 {
             filter: drop-shadow(rgba(56, 56, 56, 0.432) 2rem 2rem 10px);
         }
-
+        
+        
+        .pfpholder {
+            height: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10%;
+            >img {
+                border: 2px solid #1F2544;
+            }
+        }
         @keyframes fadeInAnimation {
             0% {
                 opacity: 0;
@@ -51,7 +63,10 @@
 <body>
     <div class="screen">
         <div class="holder1">
-            <h1>Kate McCarney</h1>
+            <div class="pfpholder">
+                <img src="pfp.jpg" style="width: 25%; border-radius: 50%;filter: drop-shadow(rgba(56, 56, 56, 0.432) 5px 5px 10px);">
+                <h1>Kate McCarney</h1>
+            </div>
             <h2>Amature-ish Game Developer</h2>
         </div>
     </div>
