--- a/index.html
+++ b/index.html
@@ -2,21 +2,30 @@
 <html>
 <head>
     <style>
+        html,body
+        {
+            width: 100%;
+            height: 100%;
+            margin: 0px;
+            padding: 0px;
+            overflow-x: hidden; 
+        }
         .screen {
             position: absolute;
             left: 0;
             right: 0;
             width: 100%;
             height: 100%;
-            background-color: #81689D;
+            flex-direction: column;
             display: flex;
             align-items: center;
             justify-content: center;
+            background-color: #81689D;
             color:#1F2544;
         }
         .holder1 {
-            width: 50%;
-            height: 15%;
+            width: 25%;
+            height: 20%;
             flex-direction: column;
             display: flex;
             align-items: center;
@@ -29,6 +38,7 @@
             animation: fadeInAnimation ease 1s;
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
+            margin: 2%;
         }
         h1 {
             filter: drop-shadow(rgba(56, 56, 56, 0.432) 2rem 2rem 10px);
@@ -44,8 +54,14 @@
             align-items: center;
             justify-content: center;
             gap: 10%;
+            
             >img {
+                background-image: "pfp.jpg";
                 border: 2px solid #1F2544;
+                height: 100%;
+                
+                border-radius: 50%;
+                filter: drop-shadow(rgba(56, 56, 56, 0.432) 5px 5px 10px);
             }
         }
         @keyframes fadeInAnimation {
@@ -64,8 +80,8 @@
     <div class="screen">
         <div class="holder1">
             <div class="pfpholder">
-                <img src="pfp.jpg" style="width: 25%; border-radius: 50%;filter: drop-shadow(rgba(56, 56, 56, 0.432) 5px 5px 10px);">
-                <h1>Kate McCarney</h1>
+            <img src="pfp.jpg">
+            <h1>Kate McCarney</h1>
             </div>
             <h2>Amature-ish Game Developer</h2>
         </div>
